# radioactive-decay-sim

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  construction.cc  construction.hh  decay  decay.cc  detector.cc  detector.hh  event.cc  event.hh  generator.cc  generator.hh  physics.cc  physics.hh  run.cc  run.hh
experimental-data/: decay-sim-t10-data.csv  decay-sim-t20-data.csv
